base/wordpress/ingress.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: wordpress
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - "wordpress.test"
  rules:
  - backendRefs:
    - name: wordpress
      port: 80
