base/wordpress/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: australia-southeast2-docker.pkg.dev/cplonline/cplonline-repository/wordpress-test:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        volumeMounts:
          - name: www-data
            mountPath: /var/www/html
        resources:
          requests:
            cpu: 400m
            memory: 256Mi
          limits:
            cpu: 800m
            memory: 512Mi

      - name: nginx
        image: nginx:1.27.4
        ports:
        - containerPort: 80
        volumeMounts:
          - name: www-data
            mountPath: /var/www/html
            readOnly: true
          - name: nginx
            mountPath: /etc/nginx/conf.d
            readOnly: true
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 10

      volumes:
      - name: www-data
        emptyDir: {}
      - name: nginx
        configMap:
          name: wordpress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  # annotations:
  #   cloud.google.com/neg: '{"ingress": true}'
  #   cloud.google.com/backend-config: '{"ports": {"http":"wordpress-backend"}}'
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: wordpress
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - "new.cplonline.com.au"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: wordpress
      port: 80
